<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/wall_570"><LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="center">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/main_title" android:layout_marginBottom="25dip" android:textSize="24.5sp" android:textColor="@color/red_color" android:id="@+id/Title"/>
		-
		<RadioGroup android:id="@+id/group1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
			<RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/a" android:text="@string/choice_1" />
			<RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/b" android:text="@string/choice_2" />
			<RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/c" android:text="@string/choice_3" />
			<RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/d" android:text="@string/choice_4" />
		</RadioGroup>
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Next" android:id="@+id/Next" />
	</LinearLayout></LinearLayout>
	